--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,36 +23,8 @@ body {
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
-    "menu ."
     "menu .";
 
-    .Menu{
-        grid-area: menu;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        .NavLinks{
-            height: 80%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            .NavLink{
-                color: $textcolor;
-                width: 100%;
-                height: 20%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                button{
-                    outline: none;
-                    border: none;
-                    background: none;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
+    @import '__menu';
+    @import '__home';
 }
