--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,4 @@
-@font-face {
-    font-family: 'Poppins';
-    src: url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
-}
-
-$textcolor: rgba(30, 30, 30, 1);
+$textcolor: rgb(216, 216, 216);
 
 * {
     box-sizing: border-box;
@@ -12,7 +7,7 @@ $textcolor: rgba(30, 30, 30, 1);
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: $textcolor;
 }
 
@@ -20,11 +15,25 @@ body {
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 6fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
-    "menu .";
+    "sidebar .";
+    background: linear-gradient(60deg, transparent 20%, rgba(255, 255, 255, 0.2));
+    background-color: #af893c;
+    overflow: hidden;
 
-    @import '__menu';
+    .doge-svg{
+        position: absolute;
+        left: 15vw;
+        bottom: 0px;
+        width: 248.9px;
+        height: 264.1px;
+    }
+
+    @import '__sidebar';
+    @import '__form';
     @import '__home';
+    @import '__send';
+    
 }
