--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,8 +15,8 @@ body {
   width: 100vw;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 6fr;
-      grid-template-columns: 1fr 6fr;
+  -ms-grid-columns: 15vw 85vw;
+      grid-template-columns: 15vw 85vw;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
       grid-template-areas: "sidebar .";
@@ -44,12 +44,55 @@ body {
   padding: 10px;
   background: rgba(41, 43, 46, 0.8);
   color: #e6e6e6;
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
 }
 
 .App .Card .header {
   font-size: 24px;
   font-weight: bold;
   margin: 0px 0px 20px 0px;
+}
+
+.App .InfoCard {
+  position: absolute;
+  width: 85vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: translateX(15vw);
+          transform: translateX(15vw);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
+  z-index: 2;
+}
+
+.App .InfoCard .Card {
+  width: 80%;
+  height: 80%;
+  background: #292b2e;
+}
+
+.App .InfoCard .Card button {
+  background: none;
+  outline: none;
+  border: none;
+  color: #e6e6e6;
+  cursor: pointer;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+
+.App .hidden {
+  display: none;
 }
 
 .App .Sidebar {
@@ -432,6 +475,91 @@ body {
 }
 
 .App .Send .snackbox {
+  position: absolute;
+}
+
+.App .Receive {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  padding: 0px 0px 10% 0px;
+  z-index: 1;
+}
+
+.App .Receive .Card {
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5% 0px 5% 0px;
+}
+
+.App .Receive .Card .formWrapper {
+  width: 60%;
+}
+
+.App .Receive .Card #qrcode {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  padding: 0px 5% 0px 5%;
+  margin: 20px 0px 0px 0px;
+}
+
+.App .Receive .Card #qrcode button {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  outline: none;
+  border: none;
+  background: none;
+  color: #e6e6e6;
+  cursor: pointer;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+}
+
+.App .Receive .Card #qrcode .header {
+  font-size: 20px;
+}
+
+.App .Receive .Card #qrcode .address {
+  font-size: 12px;
+}
+
+.App .Receive .Card #qrcode * {
+  margin: 10px 0px 0px 0px;
+}
+
+.App .Receive .snackbox {
   position: absolute;
 }
 
