--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -81,11 +81,44 @@ body {
                 right: 5px;
                 top: 5px;
             }
+
+            h1{
+                margin: 0px 0px 10px 0px;
+            }
+
+            .info{
+                width: 90%;
+                height: 90%;
+                display: flex;
+                flex-direction: column;
+
+                div{
+                    width: 100%;
+                    display: flex;
+                    margin: 0px 0px 5px 0px;
+
+                    .label{
+                        width: 50%;
+                        font-weight: bold;
+                    }
+                }
+            }
         }
     }
 
     .hidden{
         display: none;
+    }
+
+    .skeleton{
+        margin: 10px;
+        border-radius: 5px;
+        background-color:rgba(41, 43, 46, 0.4);
+        z-index: 1;
+    }
+
+    .snackbar{
+        position: absolute;
     }
 
     @import '__sidebar';
@@ -94,6 +127,7 @@ body {
     @import '__send';
     @import '__receive';
     @import '__transactions';
+    @import '__settings';
     
 }
 
