--- a/src/styles/__form.scss
+++ b/src/styles/__form.scss
@@ -66,20 +66,63 @@ form{
         color: rgba(216, 216, 216, 0.8);
     }
 
+    #switch{
+        visibility:hidden;
+        width:0;
+        height:0;
+        margin:0;
+        z-index: 1;
+    }
+
+    .switch-label{
+        position: relative;
+        display: inline-block;
+        transform: translateX(-150%);
+        width: 40px;
+        height: 20px;
+        border: 1px solid #eeeeee;
+        background-color: transparent;
+        border-radius: 15px;
+        transition: all 0.3s linear;
+        cursor: pointer;
+    }
+
+    .switch-label:after{
+        content: '';
+        position: absolute;
+        left: 1px;
+        top: 1px;
+        width: 16px;
+        height: 16px;
+        border-radius: 10px;
+        background-color: #ffffff;
+        transition: left 0.3s ease-out;
+    }
+    
+    #switch:checked + .switch-label{
+        background-color: #42d77d;
+    }
+    #switch:checked + .switch-label:after{
+        left: 21px;
+    }
+
     button{
         outline: none;
         cursor: pointer;
-        background: none;
+        background: rgb(175, 137, 60);
         margin: 20px 0px 0px 0px;
-        border: rgba(216, 216, 216, 0.8) solid 1px;
-        color: $textcolor;
+        border: none;
+        box-shadow: 2px 0px 4px 0px rgba(0, 0, 0, 0.2), 4px 0px 10px 0px rgba(0, 0, 0, 0.19);
+        color: rgba(0, 0, 0, 0.8);
         width: 100px;
         height: 30px;
         border-radius: 15px;
+        transition: all 0.2s ease;
     }
 
     button:hover{
-        border: $textcolor solid 2px;
+        color: $textcolor;
+        // box-shadow: 4px 0px 8px 0px rgba(0, 0, 0, 0.25), 6px 0px 20px 0px rgba(0, 0, 0, 0.22);
     }
 }
 
