--- a/src/styles/__settings.scss
+++ b/src/styles/__settings.scss
@@ -21,6 +21,11 @@
                 margin: 0px 0px 20px 0px;
             }
 
+            h3{
+                width: 80%;
+                margin: 10px 0px 10px 0px;
+            }
+
             div{
                 display: flex;
                 width: 80%;
@@ -35,6 +40,7 @@
                     padding: 5px;
                     background: rgba(255,255,255,0.1);
                     text-align: center;
+                    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
                 }
             }
 
